# atombench

./: .gitignore  .gitmodules  README.md  Snakefile  depcheck.sh  pyproject.toml  runner.job
.github/workflows/: docs.yml
alexandria/: dvc.yaml
alexandria/scripts/: run_mattergen_data.sh  run_mattergen_data_tc.sh
atombench/: __init__.py  _common.py  _github.py  _leaderboard.py  _structure_io.py  cli.py  plots.py  submit.py  tables.py  times.py  verify.py
atombench/tests/: test_github.py  test_leaderboard.py
docs/: api.md  conf.py  index.md  installation.md  reproducing.md  requirements.txt  tutorial.md
docs/_static/: custom.css
job_runs/agpt_benchmark_alex/: Snakefile  train_atomgpt.job
job_runs/agpt_benchmark_jarvis/: Snakefile  train_atomgpt.job
job_runs/cdvae_benchmark_alex/: benchmark_cdvae.job  inference_cdvae.job  train_cdvae.job
job_runs/cdvae_benchmark_jarvis/: benchmark_cdvae.job  inference_cdvae.job  train_cdvae.job
job_runs/flowmm_benchmark_alex/: inference_flowmm.job  train_flowmm.job
job_runs/flowmm_benchmark_jarvis/: inference_flowmm.job  train_flowmm.job
job_runs/mattergen_base_benchmark_alex/: Snakefile  inference_mattergen.job  write_benchmark.py
job_runs/mattergen_base_benchmark_jarvis/: Snakefile  inference_mattergen.job
job_runs/mattergen_benchmark_alex/: Snakefile  conda_env.job  create_conda_env.sh  inference_mattergen.job  train_mattergen.job
job_runs/mattergen_benchmark_jarvis/: Snakefile  inference_mattergen.job  train_mattergen.job  (+1 more)
scripts/: absolute_path.sh  bar_chart.py  check_progress.sh  crystal_system_mae.py  grid_charts.py  harvest_compute_times.py  loop.sh  match_rate_bar_chart.py  plot_error_distribution.py  rmse_bar_chart.py
tc_supercon/: dvc.yaml
(+13 files in other folders)
