[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "atombench"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "matplotlib",
    "numpy",
    "pandas",
    "pymatgen",
    "scipy",
    "scikit-learn",
    "amd",
]

[project.scripts]
atombench        = "atombench.cli:main"
atombench-plots  = "atombench.plots:main"
atombench-tables = "atombench.tables:main"
atombench-verify = "atombench.verify:main"
atombench-times  = "atombench.times:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["atombench*"]

[tool.ruff]
line-length = 88
show-source = true
show-fixes = true

exclude = [
  "models/",
]
