[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "atombench"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "matplotlib",
    "numpy",
    "pandas",
    "pymatgen",
    "scipy",
    "scikit-learn",
    "amd",
]

[project.optional-dependencies]
# Needed only for `atombench-submit` (pushing to the JARVIS-Leaderboard).
# `git` must also be available on PATH, and jarvis-tools improves byte-level
# compatibility of normalized POSCAR strings with the leaderboard scorer.
submit = ["requests", "jarvis-tools"]

[project.scripts]
atombench        = "atombench.cli:main"
atombench-verify = "atombench.verify:main"
atombench-submit = "atombench.submit:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["atombench*"]

[tool.ruff]
line-length = 88
show-source = true
show-fixes = true

exclude = [
  "models/",
]
